# L-E

./: .env.example  .gitignore  01_PIPELINE_CORPUS.md  02_BACKEND_DATABASE.md  03_FRONTEND_DEPLOYMENT.md  README.md  alembic.ini  besoin-attendu_client.md  pyproject.toml  setup.cfg
.qwen/agents/: code-reviewer.agent.md
.qwen/skills/auto-skill-client-requirements/: SKILL.md
.qwen/skills/auto-skill-debug-fastapi-500/: SKILL.md
.qwen/skills/auto-skill-fastapi-async-setup/: SKILL.md
.qwen/skills/auto-skill-fastapi-curl-e2e/: SKILL.md
.qwen/skills/auto-skill-srs-code-review/: SKILL.md
.qwen/skills/auto-skill-subagent-diagnostic/: SKILL.md
alembic/: env.py
alembic/versions/: 667cb76fe294_initial_schema.py
app/: main.py
app/ai/: __init__.py  base.py  image.py  llm.py  schemas.py
app/ai/generators/: __init__.py  images.py
app/ai/prompts/: __init__.py  expression_prompt.txt  image_prompt.txt
app/ai/providers/: deepseek.py  flux.py  gemini.py
app/ai/validators/: expressions.py  images.py
app/api/: ai.py  auth.py  expressions.py  images.py  memory.py  router.py  users.py
app/core/: config.py  database.py  dependencies.py  security.py
app/engines/: sm2.py
app/models/: base.py  expression.py  memory.py  mistake.py  session.py  user.py
app/schemas/: auth.py  expression.py  memory.py
app/services/: learning.py  questions.py  review.py
scripts/: generate_corpus.py  generate_images.py  seed_corpus.py
tests/: test_sm2.py
